# rifaFacil

./: .env.template  .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml  mutation.yml
nginx/: rifafacil.conf
scripts/: deploy.sh  setup_server.sh
src/rifafacil/domain/: boleto.py  estado_boleto.py  numero_boleto.py  participante.py  rifa.py  telefono.py
src/rifafacil/infrastructure/: sqlite_rifa_repository.py
src/rifafacil/web/: app.py  store.py
src/rifafacil/web/templates/: base.html  index.html
src/rifafacil/web/templates/admin/: panel.html
src/rifafacil/web/templates/admin/partials/: config_campaign.html  config_max_boletos.html  config_refresh.html  fila_boleto.html  galeria_imagenes.html  tabla_boletos.html
src/rifafacil/web/templates/partials/: confirmacion.html  error.html  formulario.html  grilla.html
tests/domain/: test_boleto.py  test_estado_boleto.py  test_numero_boleto.py  test_participante.py  test_rifa.py  test_telefono.py
tests/infrastructure/: test_sqlite_rifa_repository.py
tests/web/: conftest.py  test_admin.py  test_campaign.py
